RESOLVED FIXED228973
HTMLMetaElement http-equiv should not be processed in shadow trees
https://bugs.webkit.org/show_bug.cgi?id=228973
Summary HTMLMetaElement http-equiv should not be processed in shadow trees
Chris Dumez
Reported 2021-08-10 14:41:20 PDT
HTMLMediaElement http-equiv should only not be processed in shadow trees: - https://html.spec.whatwg.org/#attr-meta-http-equiv - https://html.spec.whatwg.org/multipage/infrastructure.html#insert-an-element-into-a-document - https://dom.spec.whatwg.org/#in-a-document-tree Firefox and Chrome already match the specification here.
Attachments
Patch (4.98 KB, patch)
2021-08-10 14:44 PDT, Chris Dumez
no flags
Patch (4.96 KB, patch)
2021-08-10 15:30 PDT, Chris Dumez
no flags
Patch (5.02 KB, patch)
2021-08-11 08:46 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-08-10 14:44:24 PDT
Chris Dumez
Comment 2 2021-08-10 15:30:44 PDT
Chris Dumez
Comment 3 2021-08-11 08:46:29 PDT
Geoffrey Garen
Comment 4 2021-08-11 09:18:45 PDT
Comment on attachment 435348 [details] Patch r=me
EWS
Comment 5 2021-08-11 09:40:05 PDT
Committed r280913 (240434@main): <https://commits.webkit.org/240434@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435348 [details].
Radar WebKit Bug Importer
Comment 6 2021-08-11 09:41:18 PDT
Note You need to log in before you can comment on or make changes to this bug.