HTMLMetaElement http-equiv should not be processed in shadow trees https://bugs.webkit.org/show_bug.cgi?id=228973

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

Rebaseline WPT test that is now passing.

* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/not-in-shadow-tree-expected.txt:

Source/WebCore:

HTMLMetaElement http-equiv should not be processed in shadow trees:
- https://html.spec.whatwg.org/#attr-meta-http-equiv
- https://html.spec.whatwg.org/multipage/infrastructure.html#insert-an-element-into-a-document
- https://dom.spec.whatwg.org/#in-a-document-tree

Firefox and Chrome already match the specification here.

No new tests, rebaselined existing test.

* dom/Node.h:
(WebCore::Node::isInDocumentTree const):
* html/HTMLMetaElement.cpp:
(WebCore::HTMLMetaElement::attributeChanged):
(WebCore::HTMLMetaElement::process):


Canonical link: https://commits.webkit.org/240434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280913 268f45cc-cd09-0410-ab3c-d52691b4dbfc